# adventofcode-2021

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  codecov.yml  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/aoc2021_python/: __init__.py  __main__.py
src/aoc_python/2021/: day1.py
src/aoc_python/util/: __init__.py  common.py
src/aoc_python/year2021/: __init__.py  day1.py  day2.py  day3.py  day4.py
tests/: __init__.py  test_auto.py  test_main.py
tests/test_data/2021/day1/: autotest.yaml
tests/test_data/2021/day2/: autotest.yaml
tests/test_data/2021/day3/: autotest.yaml
tests/test_data/2021/day4/: autotest.yaml
