[tool.poetry]
name = "aoc2021-python"
version = "0.0.0"
description = "Avent of Code 2021 - Python"
authors = ["Erik van der Goetz <erik.vandergoetz@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Erik-vdg/aoc2021-python"
repository = "https://github.com/Erik-vdg/aoc2021-python"
documentation = "https://aoc2021-python.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/Erik-vdg/aoc2021-python/releases"

[tool.poetry.dependencies]
python = "^3.7.12"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
mypy = "^0.790"
typeguard = "^2.9.1"
xdoctest = {extras = ["colors"], version = "^0.15.0"}
sphinx = "^3.3.1"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.8.2"
flake8 = "^3.8.4"
black = "^21.12b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.11.29"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.5.5"
reorder-python-imports = "^2.3.6"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-click = "^2.5.0"
Pygments = "^2.7.2"

[tool.poetry.scripts]
aoc2021-python = "aoc2021_python.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["aoc2021_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
